--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
 </head>
 <body>
 
-    <div id=""></div>
+    <div class="background">
+
+        <div id="root" class="container">
+
+            <div class="left-box">
+
+                <div class="name_user"></div>
+                <div class="notifiche"></div>
+                <div class="search"></div>
+                <div class="users_list"></div>
+
+            </div>
+
+            <div class="right-box">
+
+                <div class="user_msg"></div>
+                <div class="box_msg"></div>
+                <div class="write_msg"></div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <script src="Js/script.js"></script>
 </body>
