--- a/index.html
+++ b/index.html
@@ -27,18 +27,64 @@
 
             <div class="left-box">
 
-                <div class="name_user"></div>
+                <!-- nome utente -->
+                <div class="name_user">
+                    <div>
+                        <h3>Nome Utente</h3>
+                    </div>
+                    <div>
+                        <i class="fas fa-circle-notch"></i>
+                        <i class="fas fa-comment-alt"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+
+                <!-- notifiche -->
                 <div class="notifiche"></div>
-                <div class="search"></div>
+
+                <!-- search -->
+                <div class="search_box">
+                    <div class="search_icon_box">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <input class="search" type="text"  placeholder="Cerca o inizia una nuova chat">
+                </div>
+
+                <!-- lista utenti -->
                 <div class="users_list"></div>
 
             </div>
 
             <div class="right-box">
 
-                <div class="user_msg"></div>
+                <!-- utente in conversazione -->
+                <div class="user_msg">
+                    <div>
+                        <h3>Nome Utente</h3>
+                        <p>Ultimo Accesso oggi alle</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-paperclip"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+
+                <!-- messaggi -->
                 <div class="box_msg"></div>
-                <div class="write_msg"></div>
+
+                <!-- scrivi un messaggio -->
+                <div class="write_msg">
+                    <div class="icon_box">
+                        <i class="far fa-smile"></i>
+                    </div>
+                    <div class="write_box">
+                        <input class="write" type="text"  placeholder="Scrivi un messaggio">
+                    </div>
+                    <div class="icon_box">
+                        <i class="fas fa-microphone"></i>
+                    </div>
+                </div>
 
             </div>
 
