--- a/index.html
+++ b/index.html
@@ -24,56 +24,62 @@
     <div class="background">
 
         <div id="root" class="container">
-
+            <!------------------------ LEFT BOX ------------------------>
             <div class="left-box">
-
-                <!-- nome utente -->
+                <!------------------------ nome utente ------------------------>
                 <div class="name_user">
-                    <div>
+                    <div class="box_name_user">
+                        <img src="img/avatar_1.jpg" alt="">
                         <h3>Nome Utente</h3>
                     </div>
-                    <div>
+                    <div class="icons">
                         <i class="fas fa-circle-notch"></i>
                         <i class="fas fa-comment-alt"></i>
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </div>
-
-                <!-- notifiche -->
-                <div class="notifiche"></div>
-
-                <!-- search -->
+                <!------------------------ notifiche ------------------------>
+                <div class="notifiche">
+                    <div class="bell_box">
+                        <i class="fas fa-bell-slash"></i>
+                    </div>
+                    <div>
+                        <h3>Ricevi notifiche di nuovi messaggi</h3>
+                        <a href="">Attiva notifiche desktop</a>
+                    </div>
+                </div>
+                <!------------------------ search ------------------------>
                 <div class="search_box">
                     <div class="search_icon_box">
                         <i class="fas fa-search"></i>
                     </div>
                     <input class="search" type="text"  placeholder="Cerca o inizia una nuova chat">
                 </div>
-
-                <!-- lista utenti -->
+                <!------------------------ lista utenti ------------------------>
                 <div class="users_list"></div>
 
             </div>
 
+            <!------------------------ RIGHT BOX ------------------------>
             <div class="right-box">
-
-                <!-- utente in conversazione -->
+                <!------------------------ utente in conversazione ------------------------>
                 <div class="user_msg">
-                    <div>
-                        <h3>Nome Utente</h3>
-                        <p>Ultimo Accesso oggi alle</p>
+                    <div class="box_name_user">
+                        <img src="img/avatar_2.jpg" alt="">
+                        <div>
+                            <h3>Nome Utente</h3>
+                            <p>Ultimo Accesso oggi alle</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="icons">
                         <i class="fas fa-search"></i>
                         <i class="fas fa-paperclip"></i>
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </div>
-
-                <!-- messaggi -->
+                <!------------------------ messaggi ------------------------>
                 <div class="box_msg"></div>
-
-                <!-- scrivi un messaggio -->
+                <!------------------------ scrivi un messaggio ------------------------>
                 <div class="write_msg">
                     <div class="icon_box">
                         <i class="far fa-smile"></i>
