--- a/index.html
+++ b/index.html
@@ -56,7 +56,48 @@
                     <input class="search" type="text"  placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <!------------------------ lista utenti ------------------------>
-                <div class="users_list"></div>
+                <ul class="users_list">
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                    <li class="box_user">                       
+                        <img src="img/avatar_5.jpg" alt="">                       
+                        <h3>Nome Utente</h3>
+                    </li>
+                </ul>
 
             </div>
 
