--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div>
                         <h3>Ricevi notifiche di nuovi messaggi</h3>
-                        <a href="">Attiva notifiche desktop</a>
+                        <a href="#">Attiva notifiche desktop</a>
                     </div>
                 </div>
                 <!------------------------ search ------------------------>
@@ -83,7 +83,83 @@
                     </div>
                 </div>
                 <!------------------------ messaggi ------------------------>
-                <div class="box_msg"></div>
+                <div class="chat">
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Come va?
+                        </div>
+                    </div>
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Come va?
+                        </div>
+                    </div>
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Come va?
+                        </div>
+                    </div>
+                    <div class="white_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao! Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit., sit amet consectetur adipisicing elit. 
+                        </div>
+                    </div>
+                    <div class="green_msg_col">
+                        <div class="box_msg">
+                            Ciao!
+                        </div>
+                    </div>
+                </div>
                 <!------------------------ scrivi un messaggio ------------------------>
                 <div class="write_msg">
                     <div class="icon_box">
