--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     <li @click='showChat(index)' v-for="(item, index) in contacts" :key='index' class="box_user">                       
                         <img :src="`img/avatar${item.avatar}.jpg`" :alt="item.name">                       
                         <h3>{{item.name}}</h3>
-                        <p>{{index}}</p>
                     </li>
                 </ul>
 
@@ -74,7 +73,7 @@
                         <img :src="`img/avatar${contacts[avatarIndex].avatar}.jpg`" alt="">
                         <div>
                             <h3>{{contacts[avatarIndex].name}}</h3>
-                            <p>Ultimo Accesso oggi alle</p>
+                            <p>Online</p>
                         </div>
                     </div>
                     <div class="icons">
@@ -85,14 +84,10 @@
                 </div>
                 <!------------------------ messaggi ------------------------>
                 <div class="chat">
-                    <div class="white_msg_col" v-for="(item, index) in contacts[avatarIndex].messages"  :key='index' >
-                        <div class="box_msg white_msg" >
-                            {{contacts[avatarIndex].messages[index].message}}
-                        </div>
-                    </div>
-                    <div class="green_msg_col">
-                        <div class="box_msg green_msg">
-                            Ciao! Come va? 
+                    <div class="msg_col" v-for="(item, index) in contacts[avatarIndex].messages" :key='index'>
+                        <div class="box_msg" :class="item.status" >
+                            {{item.message}}
+                            <div class="msgDate">{{item.date}}</div>
                         </div>
                     </div>
                 </div>
